Address code tag issue on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,11 @@ a {
   text-decoration: none;
 }
 
+pre,
+code {
+  max-width: calc(100vw - 32px);
+}
+
 * {
   box-sizing: border-box;
 }
